# Telecom_Churn_Prediction

./: .gitignore  20231382 - ML ICW.ipynb  20231382_ML_ICW.ipynb  LICENSE  README.md  main.py  pyproject.toml
data/processed/: preprocessed_telco.csv  telco_churn_encoded.csv
model-export/: churn_nn_model.keras  dt_clf_model.pkl
notebooks/: 20231382_ML_ICW.ipynb  decision_tree.ipynb  decision_tree_classifie_v2_smote.ipynb  decision_tree_classifier.ipynb  exploratory_data_analysis.ipynb  neural_network.ipynb  neural_network_churn_model.ipynb  neural_network_churn_model_v2_smote.ipynb  neural_network_churn_model_v3_kerastuner.ipynb  telco_churn_eda.ipynb  telco_churn_feature_engineering.ipynb
notebooks/churn_tuning/churn_keras_tuner/: oracle.json
notebooks/churn_tuning/churn_keras_tuner/trial_0000/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0001/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0002/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0003/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0004/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0005/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0006/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0007/: checkpoint.weights.h5  trial.json
notebooks/churn_tuning/churn_keras_tuner/trial_0008/: checkpoint.weights.h5  trial.json
(+162 files in other folders)
