[project]
name = "telecom-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "yellowbrick>=1.5",
]
